--- a/index.html
+++ b/index.html
@@ -35,15 +35,21 @@
 				<h1 id="city-name"></h1>
 				<h1 id="country-name"></h1>
 			</div>
-			<div id="card-container" class="flex">
-				<div class="weather-card"></div>
-				<div class="weather-card"></div>
-				<div class="weather-card"></div>
-				<div class="weather-card"></div>
-				<div class="weather-card"></div>
-				<div class="weather-card"></div>
-			</div>
+			<div id="card-container" class="flex"></div>
 		</main>
+		<div class="overlay loading">
+			<svg class="spinner" viewBox="0 0 50 50">
+				<circle
+					class="spinner-path"
+					cx="25"
+					cy="25"
+					r="20"
+					fill="none"
+					stroke-width="4"
+				></circle>
+			</svg>
+		</div>
+
 		<!-- <div> Icons made by <a href="https://www.flaticon.com/authors/alfredo-hernandez" title="Alfredo Hernandez"> Alfredo Hernandez </a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div> -->
 		<script src="./js/main.js" type="text/javascript"></script>
 	</body>
