--- a/index.html
+++ b/index.html
@@ -51,6 +51,10 @@
 		</div>
 
 		<!-- <div> Icons made by <a href="https://www.flaticon.com/authors/alfredo-hernandez" title="Alfredo Hernandez"> Alfredo Hernandez </a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div> -->
+		<!-- <a href="https://www.flaticon.com/free-animated-icons/location" title="location animated icons">Location animated icons created by Freepik - Flaticon</a> -->
+		<!-- <a href="https://www.flaticon.com/free-animated-icons/cloud-computing" title="cloud computing animated icons">Cloud computing animated icons created by Freepik - Flaticon</a> -->
+		<!-- <a href="https://www.flaticon.com/free-icons/temperature" title="temperature icons">Temperature icons created by Freepik - Flaticon</a> -->
+		<!-- <a href="https://www.flaticon.com/free-icons/wind" title="wind icons">Wind icons created by Freepik - Flaticon</a> -->
 		<script src="./js/main.js" type="text/javascript"></script>
 	</body>
 </html>
