--- a/index.html
+++ b/index.html
@@ -48,6 +48,11 @@
 					stroke-width="4"
 				></circle>
 			</svg>
+			<!-- <img
+				id="loading-image"
+				src="./img/cloud-network.gif"
+				type="image/gif"
+			/> -->
 		</div>
 
 		<!-- <div> Icons made by <a href="https://www.flaticon.com/authors/alfredo-hernandez" title="Alfredo Hernandez"> Alfredo Hernandez </a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div> -->
