--- a/index.html
+++ b/index.html
@@ -4,11 +4,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" type="text/css" href="./css/main.css" />
-		<link
-			rel="icon shortcut-icon"
-			type="image/png"
-			href="./img/site-icon.png"
-		/>
+		<link rel="icon shortcut-icon" type="image/png" href="./img/site-icon.png" />
 		<title>What's the weather?</title>
 	</head>
 	<body>
@@ -20,12 +16,7 @@
 			<div id="city-select">
 				<label for="city-input">City:&nbsp;</label>
 				<input type="text" id="city-input" placeholder="Lagos" />
-				<img
-					src="./img/search-icon.png"
-					type="image/png"
-					width="20px"
-					id="search-icon"
-				/>
+				<img src="./img/search-icon.png" type="image/png" width="20px" id="search-icon" />
 			</div>
 		</div>
 		<br />
@@ -39,14 +30,7 @@
 		</main>
 		<div class="overlay loading">
 			<svg class="spinner" viewBox="0 0 50 50">
-				<circle
-					class="spinner-path"
-					cx="25"
-					cy="25"
-					r="20"
-					fill="none"
-					stroke-width="4"
-				></circle>
+				<circle class="spinner-path" cx="25" cy="25" r="20" fill="none" stroke-width="4"></circle>
 			</svg>
 			<!-- <img
 				id="loading-image"
@@ -54,12 +38,40 @@
 				type="image/gif"
 			/> -->
 		</div>
-
-		<!-- <div> Icons made by <a href="https://www.flaticon.com/authors/alfredo-hernandez" title="Alfredo Hernandez"> Alfredo Hernandez </a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div> -->
-		<!-- <a href="https://www.flaticon.com/free-animated-icons/location" title="location animated icons">Location animated icons created by Freepik - Flaticon</a> -->
-		<!-- <a href="https://www.flaticon.com/free-animated-icons/cloud-computing" title="cloud computing animated icons">Cloud computing animated icons created by Freepik - Flaticon</a> -->
-		<!-- <a href="https://www.flaticon.com/free-icons/temperature" title="temperature icons">Temperature icons created by Freepik - Flaticon</a> -->
-		<!-- <a href="https://www.flaticon.com/free-icons/wind" title="wind icons">Wind icons created by Freepik - Flaticon</a> -->
+		<div id="attribution">
+			<h1>Attributions</h1>
+			<hr />
+			<p>
+				Icons made by
+				<a href="https://www.flaticon.com/authors/alfredo-hernandez" title="Alfredo Hernandez" target="_blank"
+					>Alfredo Hernandez</a
+				>
+				from <a href="https://www.flaticon.com/" title="Flaticon" target="_blank">www.flaticon.com</a>
+			</p>
+			<p>
+				<a href="https://www.flaticon.com/free-animated-icons/location" title="location animated icons" target="_blank"
+					>Location animated icons created by Freepik - Flaticon</a
+				>
+			</p>
+			<p>
+				<a
+					href="https://www.flaticon.com/free-animated-icons/cloud-computing"
+					title="cloud computing animated icons"
+					target="_blank"
+					>Cloud computing animated icons created by Freepik - Flaticon</a
+				>
+			</p>
+			<p>
+				<a href="https://www.flaticon.com/free-icons/temperature" title="temperature icons" target="_blank"
+					>Temperature icons created by Freepik - Flaticon</a
+				>
+			</p>
+			<p>
+				<a href="https://www.flaticon.com/free-icons/wind" title="wind icons" target="_blank"
+					>Wind icons created by Freepik - Flaticon</a
+				>
+			</p>
+		</div>
 		<script src="./js/main.js" type="text/javascript"></script>
 	</body>
 </html>
