--- a/index.html
+++ b/index.html
@@ -30,13 +30,8 @@
 		</main>
 		<div class="overlay loading">
 			<svg class="spinner" viewBox="0 0 50 50">
-				<circle class="spinner-path" cx="25" cy="25" r="20" fill="none" stroke-width="4"></circle>
+				<circle class="spinner-path" cx="25" cy="25" r="20" fill="none" stroke-width="4"/>
 			</svg>
-			<!-- <img
-				id="loading-image"
-				src="./img/cloud-network.gif"
-				type="image/gif"
-			/> -->
 		</div>
 		<div id="attribution">
 			<h1>Attributions</h1>
